; ModuleID = '/home/carl/AnghaBench/freebsd/tools/tools/usbtest/extr_usb_msc_test.c_get_io_size.c'
source_filename = "/home/carl/AnghaBench/freebsd/tools/tools/usbtest/extr_usb_msc_test.c_get_io_size.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.usb_msc_params = type { i32 }

@.str = private unnamed_addr constant [7 x i8] c"Random\00", align 1
@.str.1 = private unnamed_addr constant [11 x i8] c"Increasing\00", align 1
@.str.2 = private unnamed_addr constant [13 x i8] c"Single block\00", align 1
@.str.3 = private unnamed_addr constant [9 x i8] c"2 blocks\00", align 1
@.str.4 = private unnamed_addr constant [9 x i8] c"4 blocks\00", align 1
@.str.5 = private unnamed_addr constant [9 x i8] c"8 blocks\00", align 1
@.str.6 = private unnamed_addr constant [10 x i8] c"16 blocks\00", align 1
@.str.7 = private unnamed_addr constant [10 x i8] c"32 blocks\00", align 1
@.str.8 = private unnamed_addr constant [10 x i8] c"64 blocks\00", align 1
@.str.9 = private unnamed_addr constant [11 x i8] c"128 blocks\00", align 1
@.str.10 = private unnamed_addr constant [11 x i8] c"256 blocks\00", align 1
@.str.11 = private unnamed_addr constant [11 x i8] c"512 blocks\00", align 1
@.str.12 = private unnamed_addr constant [12 x i8] c"1024 blocks\00", align 1
@.str.13 = private unnamed_addr constant [8 x i8] c"Unknown\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.usb_msc_params*)* @get_io_size to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @get_io_size(%struct.usb_msc_params* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.usb_msc_params*, align 8
  store %struct.usb_msc_params* %0, %struct.usb_msc_params** %3, align 8
  %4 = load %struct.usb_msc_params*, %struct.usb_msc_params** %3, align 8
  %5 = getelementptr inbounds %struct.usb_msc_params, %struct.usb_msc_params* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  switch i32 %6, label %20 [
    i32 128, label %7
    i32 129, label %8
    i32 137, label %9
    i32 135, label %10
    i32 133, label %11
    i32 130, label %12
    i32 138, label %13
    i32 134, label %14
    i32 131, label %15
    i32 139, label %16
    i32 136, label %17
    i32 132, label %18
    i32 140, label %19
  ]

7:                                                ; preds = %1
  store i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), i8** %2, align 8
  br label %21

8:                                                ; preds = %1
  store i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.1, i64 0, i64 0), i8** %2, align 8
  br label %21

9:                                                ; preds = %1
  store i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.2, i64 0, i64 0), i8** %2, align 8
  br label %21

10:                                               ; preds = %1
  store i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.3, i64 0, i64 0), i8** %2, align 8
  br label %21

11:                                               ; preds = %1
  store i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.4, i64 0, i64 0), i8** %2, align 8
  br label %21

12:                                               ; preds = %1
  store i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.5, i64 0, i64 0), i8** %2, align 8
  br label %21

13:                                               ; preds = %1
  store i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.6, i64 0, i64 0), i8** %2, align 8
  br label %21

14:                                               ; preds = %1
  store i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.7, i64 0, i64 0), i8** %2, align 8
  br label %21

15:                                               ; preds = %1
  store i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.8, i64 0, i64 0), i8** %2, align 8
  br label %21

16:                                               ; preds = %1
  store i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.9, i64 0, i64 0), i8** %2, align 8
  br label %21

17:                                               ; preds = %1
  store i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.10, i64 0, i64 0), i8** %2, align 8
  br label %21

18:                                               ; preds = %1
  store i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.11, i64 0, i64 0), i8** %2, align 8
  br label %21

19:                                               ; preds = %1
  store i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.12, i64 0, i64 0), i8** %2, align 8
  br label %21

20:                                               ; preds = %1
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.13, i64 0, i64 0), i8** %2, align 8
  br label %21

21:                                               ; preds = %20, %19, %18, %17, %16, %15, %14, %13, %12, %11, %10, %9, %8, %7
  %22 = load i8*, i8** %2, align 8
  ret i8* %22
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
